# pneo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
antlr4/: NeoBasicKeywords.g4  NeoBasicParser.g4
scripts/: rename.py
src/parser/: NeoBasicKeywords.interp  NeoBasicKeywords.py  NeoBasicParser.interp
src/pneo/: __init__.py  __main__.py  commands.py  config.py
src/pneo/command/: command_add.py  command_clean.py  command_config.py  command_init.py
src/pneo/command/invoker/: invoker_add.py  invoker_backup.py  invoker_build.py  invoker_check.py  invoker_clean.py  invoker_compile.py  invoker_config.py  invoker_format.py  invoker_hotspot.py  invoker_init.py  invoker_lint.py  invoker_list.py  invoker_lock.py  invoker_make.py  invoker_package.py  invoker_parse.py  invoker_remove.py  invoker_run.py  invoker_self.py  invoker_serve.py  invoker_tree.py  invoker_venv.py  invoker_version.py  invoker_view.py
src/pneo/command/receiver/: receiver_add.py  receiver_backup.py  receiver_build.py  receiver_check.py  receiver_clean.py  receiver_compile.py  receiver_config.py  receiver_format.py  receiver_hotspot.py  receiver_init.py  receiver_lint.py  receiver_list.py  receiver_lock.py  receiver_make.py  receiver_package.py  receiver_parse.py  receiver_remove.py  receiver_run.py  receiver_self.py  receiver_serve.py  receiver_tree.py  receiver_venv.py  receiver_version.py  receiver_view.py
src/pneo/config/: debug.yaml  info.yaml  notset.yaml  pneo.conf
src/pneo/config/setting/: setting_facade.py
src/pneo/config/tracing/: __init__.py  strategies.py  tracing_facade.py
src/pneo/locale/en_US/LC_MESSAGES/: click.po  messages.po  nasa.po  ngne.po  ntcpp.po  nuit.po  pneo.po
src/pneo/locale/pt_BR/LC_MESSAGES/: click.po  messages.po  nasa.po  ngne.po  ntcpp.po  nuit.po  pneo.po
src/pneo/tracing/: logger.py  strategies.py
tests/: demo.neo
tools/: gant  grun  pyi  pylocale
typings/: .gitignore
