[project]
name = "pneo"
version = "0.0.1"
authors = [{ name="Raul Bras", email="@teknolista" }]
description = "Prototype implementation of a project and package manager for the NeoBASIC programming language, written in Python."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.7.3",
    "pyyaml>=6.0.2",
    "babel>=2.17.0",
    "click>=8.1.7",
    "jinja2>=3.1.6",
]
keywords = ["pneo", "neobasic", "programming", "language", "package", "project", "manager", "bundler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
]

[project.scripts]
pneo = "pneo.__main__:cli"

[project.urls]
Homepage = "https://neobasic.org"
Documentation = "https://en.neobasic.org/"
Repository = "https://github.com/neobasic/pneo.git"
Issues = "https://github.com/neobasic/pneo/issues"
Changelog = "https://github.com/neobasic/pneo/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build]
include = [
    "pneo/config/*.yaml",             # Include YAML files in the 'config' folder
    "pneo/config/*.conf",             # Include INI files in the 'config' folder
    "*.py",                           # Include all Python files
    "py.typed",                       # Include the 'py.typed' file
    "README.md",                      # Include the README file
    "LICENSE",                        # Include the LICENSE file
    "pyproject.toml",                 # Include the pyproject.toml file
]
