[project]
name = "pneo"
version = "0.0.1"
authors = [
    {name = "Raul Bras"},
]
description = "Prototype implementation of a project and package manager for the NeoBASIC programming language, written in Python."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.7.3",
    "pyyaml>=6.0.2",
    "babel>=2.17.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "rich>=14.1.0",
    "tomli>=2.2.1",
    "platformdirs>=4.4.0",
    "watchdog>=6.0.0",
]
keywords = ["pneo", "neobasic", "programming", "language", "package", "project", "manager", "bundler"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
]

[project.urls]
Homepage = "https://neobasic.org"
Documentation = "https://en.neobasic.org/"
Repository = "https://github.com/neobasic/pneo.git"
Issues = "https://github.com/neobasic/pneo/issues"
Changelog = "https://github.com/neobasic/pneo/blob/main/CHANGELOG.md"

[project.scripts]
pneo = "pneo.__main__:cli"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

# Include non-Python files like .mo/.conf in the wheel
[tool.uv.build-backend]
# Specify the root of your Python module
module-root = "src"
module-name = "pneo"
# Include specific source files and configuration files
source-include = [
    "src/pneo/**/*.py",
    "src/pneo/**/*.mo",
    "src/pneo/**/*.conf",
    "src/pneo/**/*.yaml",
    "src/pneo/**/*.typed",
    "tools/**",
    "doc/**",
    "LICENSES/**",
    "uv.lock",
    "CHANGELOG.md",
]
# Exclude cache directories and temporary files
source-exclude = [
    "src/**/__pycache__",
    "src/**/*.pyc",
    "src/**/*.pyo",
    "src/**/*.pot",
    "src/**/*.po",
]
