[project]
name = "pneo"
version = "0.0.1"
authors = [
    {name = "Raul Bras"},
]
description = "Prototype implementation of a project and package manager for the NeoBASIC programming language, written in Python."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["pneo", "neobasic", "programming", "language", "package", "project", "manager", "bundler"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
]
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "anytree>=2.13.0",
    "babel>=2.17.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "platformdirs>=4.4.0",
    "pywebview>=6.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "tomli>=2.2.1",
    "watchdog>=6.0.0",
    "click",
    "ngne",
    "nasa",
    "pygls>=1.3.1",
]

[dependency-groups]
lint = [
    "ruff>=0.7.3",
]

[project.urls]
Homepage = "https://neobasic.org"
Documentation = "https://en.neobasic.org/"
Repository = "https://github.com/neobasic/pneo.git"
Issues = "https://github.com/neobasic/pneo/issues"
Changelog = "https://github.com/neobasic/pneo/blob/main/CHANGELOG.md"

[tool.uv.sources]
click = { workspace = true }
ngne = { workspace = true }
nasa = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[project.scripts]
pneo = "pneo.__main__:cli"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

# Include non-Python files like .mo/.conf in the wheel
[tool.uv.build-backend]
# Specify the root of your Python module
module-root = "src"
module-name = "pneo"
# Include specific source files and configuration files
source-include = [
    "src/pneo/**/*.py",
    "src/pneo/**/*.mo",
    "src/pneo/**/*.conf",
    "src/pneo/**/*.yaml",
    "src/pneo/**/*.typed",
    "tools/**",
    "doc/**",
    "LICENSES/**",
    "uv.lock",
    "CHANGELOG.md",
    "packages/click/src/click/**",
]
# Exclude cache directories and temporary files
source-exclude = [
    "src/**/__pycache__",
    "src/**/*.pyc",
    "src/**/*.pyo",
    "src/**/*.pot",
    "src/**/*.po",
]
